# Quantization-Pruning

./: .gitignore  LICENSE  README.md  RESULTS.md  config.py  requirements.txt  setup.cfg  setup.py
config/: config.py
data/: cifar10.py  coco.py  imagenet.py
examples/cpu/: resnet50_data_reader.py
models/conversion/: conversion.ipynb  convert_pytorch_to_onnx.py  onnx_inference.py
models/onnx/: cifar_inference.py
models/pytorch/: cifar_inference.py  engine.py  model_resnet.py  train.py
pytorch/: model_resnet.py
quantize/onnx/: README.md  dataset_calibrate.py  onnx_debug.py  onnx_pipeline.py  onnx_preprocess.py  onnx_quantize.py
utils/: __init__.py  save_load.py  utils.py
