[metadata]
name = model-quantize-prune
version = 1.0.0
author = Anh, Hoang, Linh, Nhi, Quan, Quan
description = Quantization and Pruning
long_description = This project is to test and benchmark different quantization and pruning libraries on different Deep Learning frameworks Pytorch, Tensorflow, Onnx
url = https://github.com/benjaminlq/Quantization-Pruning.git
keywords = quantization, pruning, pytorch, tensorflow, onnx

[options]
python_requires = >=3.7, <4
install_requires =
    torch==1.13.1
    torchvision==0.14.1
    numpy==1.24.2
    onnx==1.13.1
    onnxruntime==1.14.1
    onnx-simplifier==0.4.10
    
packages=find:

[options.extras_require]
train = 
    tqdm
test = 
    pytest==7.2.2
notebook =
    ipykernel==6.21.3